main menu drop down arrow click state color contrast fix

--- a/docroot/themes/custom/casella/css/custom/adw-menu.css
+++ b/docroot/themes/custom/casella/css/custom/adw-menu.css
@@ -121,11 +121,11 @@
   }
 
   nav#mainMenu ul.adwMenu li.over > .openChild .openChildInner:before {
-  color: #7abf23;
+  color: #418600;
   }
 
   nav#sectionMenu ul.adwMenu li.over > .openChild .openChildInner:before {
-  color: #7abf23;
+  color: #418600;
   }
 
   /* -- 2nd Tier and Lower Overrides */
